// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`printToDot: computedAmazonView 1`] = `
"digraph {
  compound = true;
  pad = 0.08;
  rankdir = "TB";
  nodesep = 1.0417;
  ranksep = 1.0417;
  layout = "dot";
  TBbalance = "min";
  fontname = "Helvetica";
  fontsize = 12;
  edge [
    fontname = "Helvetica";
    style = "solid";
    penwidth = 2;
    arrowsize = 0.7;
    color = "#a3a3a3";
    fontcolor = "#d4d4d4";
    nojustify = true;
  ];
  node [
    fontname = "Helvetica";
    labelloc = "c";
    shape = "rect";
    width = 3.3333;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = "0.3333,0.2083";
  ];
  subgraph "cluster_1" {
    id = "cloud";
    labeljust = "l";
    fontsize = 9;
    label = <<B>CLOUD</B>>;
    margin = 20;
    "nd2" [
      id = "cloud.backend";
      label = <<font color="#eff6ff" point-size="13.5">Backend<font point-size="15"> <br/></font></font>>;
    ];
  }
  subgraph "cluster_3" {
    id = "amazon";
    labeljust = "l";
    fontsize = 9;
    label = <<B>AMAZON</B>>;
    margin = 20;
    "nd4" [
      id = "amazon.s3";
      label = <<font color="#eff6ff" point-size="13.5">S3<font point-size="15"> <br/></font></font><font point-size="10.5"> <br/></font><font color="#dbeafe" point-size="10.5">S3 is a storage service<font point-size="12"> <br/></font></font>>;
    ];
  }
  "nd2" -> "nd4" [
    id = "cloud.backend:amazon.s3";
    label = <<font point-size="10.5">persists artifacts<font point-size="12"> <br align="LEFT"/></font></font>>;
  ];
}"
`;

exports[`printToDot: computedCloud3levels 1`] = `
"digraph {
  compound = true;
  pad = 0.08;
  rankdir = "TB";
  nodesep = 1.0417;
  ranksep = 1.0417;
  layout = "dot";
  TBbalance = "min";
  fontname = "Helvetica";
  fontsize = 12;
  edge [
    fontname = "Helvetica";
    style = "solid";
    penwidth = 2;
    arrowsize = 0.7;
    color = "#a3a3a3";
    fontcolor = "#d4d4d4";
    nojustify = true;
  ];
  node [
    fontname = "Helvetica";
    labelloc = "c";
    shape = "rect";
    width = 3.3333;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = "0.3333,0.2083";
  ];
  "nd1" [
    id = "customer";
    label = <<font color="#eff6ff" point-size="13.5">customer<font point-size="15"> <br/></font></font>>;
  ];
  "nd2" [
    id = "support";
    label = <<font color="#eff6ff" point-size="13.5">Support Engineer<font point-size="15"> <br/></font></font><font point-size="10.5"> <br/></font><font color="#dbeafe" point-size="10.5">Support engineers are responsible for supporting<font point-size="12"> <br/></font>customers<font point-size="12"> <br/></font></font>>;
  ];
  "nd9" [
    id = "amazon";
    label = <<font color="#eff6ff" point-size="13.5">Amazon<font point-size="15"> <br/></font></font><font point-size="10.5"> <br/></font><font color="#dbeafe" point-size="10.5">Amazon is a cloud provider<font point-size="12"> <br/></font></font>>;
  ];
  subgraph "cluster_3" {
    id = "cloud";
    labeljust = "l";
    fontsize = 9;
    label = <<B>CLOUD</B>>;
    margin = 30;
    "nd4" [
      id = "cloud.frontend.adminPanel";
      label = <<font color="#eff6ff" point-size="13.5">Admin Panel Webapp<font point-size="15"> <br/></font></font><font point-size="10.5"> <br/></font><font color="#dbeafe" point-size="10.5">The admin panel is a webapp that allows support<font point-size="12"> <br/></font>staff to manage customer data.<font point-size="12"> <br/></font></font>>;
    ];
    "nd5" [
      id = "cloud.frontend.dashboard";
      label = <<font color="#eff6ff" point-size="13.5">Customer Dashboard Webapp<font point-size="15"> <br/></font></font><font point-size="10.5"> <br/></font><font color="#dbeafe" point-size="10.5">The customer dashboard is a webapp that allows<font point-size="12"> <br/></font>customers to view their data.<font point-size="12"> <br/></font></font>>;
    ];
    subgraph "cluster_6" {
      id = "cloud.backend";
      labeljust = "l";
      fontsize = 9;
      label = <<B>BACKEND</B>>;
      margin = 20;
      "nd7" [
        id = "cloud.backend.graphql";
        label = <<font color="#eff6ff" point-size="13.5">Graphql API<font point-size="15"> <br/></font></font><font point-size="10.5"> <br/></font><font color="#dbeafe" point-size="10.5">Component that allows to query data via GraphQL.<font point-size="12"> <br/></font></font>>;
      ];
      "nd8" [
        id = "cloud.backend.storage";
        label = <<font color="#eff6ff" point-size="13.5">Backend Storage<font point-size="15"> <br/></font></font><font point-size="10.5"> <br/></font><font color="#dbeafe" point-size="10.5">The backend storage is a component that stores<font point-size="12"> <br/></font>data.<font point-size="12"> <br/></font></font>>;
        color = "#2563eb";
        shape = "cylinder";
      ];
    }
  }
  "nd4" -> "nd7" [
    id = "cloud.frontend.adminPanel:cloud.backend.graphql";
    label = <<font point-size="10.5">fetches data in zero trust network with sso<font point-size="12"> <br align="LEFT"/></font>authentification<font point-size="12"> <br align="LEFT"/></font></font>>;
  ];
  "nd5" -> "nd7" [
    id = "cloud.frontend.dashboard:cloud.backend.graphql";
    label = <<font point-size="10.5">fetches data<font point-size="12"> <br align="LEFT"/></font></font>>;
  ];
  "nd8" -> "nd9" [
    id = "cloud.backend.storage:amazon";
    label = <<font point-size="10.5">persists artifacts<font point-size="12"> <br align="LEFT"/></font></font>>;
  ];
  "nd1" -> "nd5" [
    id = "customer:cloud.frontend.dashboard";
    label = <<font point-size="10.5">opens in browser<font point-size="12"> <br align="LEFT"/></font></font>>;
  ];
  "nd2" -> "nd4" [
    id = "support:cloud.frontend.adminPanel";
    label = <<font point-size="10.5">manages<font point-size="12"> <br align="LEFT"/></font></font>>;
  ];
  "nd7" -> "nd8" [
    id = "cloud.backend.graphql:cloud.backend.storage";
    minlen = 0;
  ];
}"
`;

exports[`printToDot: computedCloudView 1`] = `
"digraph {
  compound = true;
  pad = 0.08;
  rankdir = "TB";
  nodesep = 1.0417;
  ranksep = 1.0417;
  layout = "dot";
  TBbalance = "min";
  fontname = "Helvetica";
  fontsize = 12;
  edge [
    fontname = "Helvetica";
    style = "solid";
    penwidth = 2;
    arrowsize = 0.7;
    color = "#a3a3a3";
    fontcolor = "#d4d4d4";
    nojustify = true;
  ];
  node [
    fontname = "Helvetica";
    labelloc = "c";
    shape = "rect";
    width = 3.3333;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = "0.3333,0.2083";
  ];
  "nd1" [
    id = "customer";
    label = <<font color="#eff6ff" point-size="13.5">customer<font point-size="15"> <br/></font></font>>;
  ];
  "nd2" [
    id = "support";
    label = <<font color="#eff6ff" point-size="13.5">Support Engineer<font point-size="15"> <br/></font></font><font point-size="10.5"> <br/></font><font color="#dbeafe" point-size="10.5">Support engineers are responsible for supporting<font point-size="12"> <br/></font>customers<font point-size="12"> <br/></font></font>>;
  ];
  "nd6" [
    id = "amazon";
    label = <<font color="#eff6ff" point-size="13.5">Amazon<font point-size="15"> <br/></font></font><font point-size="10.5"> <br/></font><font color="#dbeafe" point-size="10.5">Amazon is a cloud provider<font point-size="12"> <br/></font></font>>;
  ];
  subgraph "cluster_3" {
    id = "cloud";
    labeljust = "l";
    fontsize = 9;
    label = <<B>CLOUD</B>>;
    margin = 20;
    "nd4" [
      id = "cloud.frontend";
      label = <<font color="#eff6ff" point-size="13.5">Frontend<font point-size="15"> <br/></font></font>>;
    ];
    "nd5" [
      id = "cloud.backend";
      label = <<font color="#eff6ff" point-size="13.5">Backend<font point-size="15"> <br/></font></font>>;
    ];
  }
  "nd4" -> "nd5" [
    id = "cloud.frontend:cloud.backend";
    label = <<font point-size="10.5">fetches data<font point-size="12"> <br align="LEFT"/></font></font>>;
    minlen = 0;
  ];
  "nd5" -> "nd6" [
    id = "cloud.backend:amazon";
    label = <<font point-size="10.5">persists artifacts<font point-size="12"> <br align="LEFT"/></font></font>>;
  ];
  "nd1" -> "nd4" [
    id = "customer:cloud.frontend";
    label = <<font point-size="10.5">opens in browser<font point-size="12"> <br align="LEFT"/></font></font>>;
  ];
  "nd2" -> "nd4" [
    id = "support:cloud.frontend";
    label = <<font point-size="10.5">manages<font point-size="12"> <br align="LEFT"/></font></font>>;
  ];
}"
`;

exports[`printToDot: computedIndexView 1`] = `
"digraph {
  compound = true;
  pad = 0.08;
  rankdir = "TB";
  nodesep = 1.0417;
  ranksep = 1.0417;
  layout = "dot";
  TBbalance = "min";
  fontname = "Helvetica";
  fontsize = 12;
  edge [
    fontname = "Helvetica";
    style = "solid";
    penwidth = 2;
    arrowsize = 0.7;
    color = "#a3a3a3";
    fontcolor = "#d4d4d4";
    nojustify = true;
  ];
  node [
    fontname = "Helvetica";
    labelloc = "c";
    shape = "rect";
    width = 3.3333;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = "0.3333,0.2083";
  ];
  "nd1" [
    id = "customer";
    label = <<font color="#eff6ff" point-size="13.5">customer<font point-size="15"> <br/></font></font>>;
  ];
  "nd2" [
    id = "support";
    label = <<font color="#eff6ff" point-size="13.5">Support Engineer<font point-size="15"> <br/></font></font><font point-size="10.5"> <br/></font><font color="#dbeafe" point-size="10.5">Support engineers are responsible for supporting<font point-size="12"> <br/></font>customers<font point-size="12"> <br/></font></font>>;
  ];
  "nd3" [
    id = "cloud";
    label = <<font color="#eff6ff" point-size="13.5">cloud<font point-size="15"> <br/></font></font>>;
  ];
  "nd4" [
    id = "amazon";
    label = <<font color="#eff6ff" point-size="13.5">Amazon<font point-size="15"> <br/></font></font><font point-size="10.5"> <br/></font><font color="#dbeafe" point-size="10.5">Amazon is a cloud provider<font point-size="12"> <br/></font></font>>;
  ];
  "nd3" -> "nd4" [
    id = "cloud:amazon";
    label = <<font point-size="10.5">persists artifacts<font point-size="12"> <br align="LEFT"/></font></font>>;
  ];
  "nd1" -> "nd3" [
    id = "customer:cloud";
    label = <<font point-size="10.5">opens in browser<font point-size="12"> <br align="LEFT"/></font></font>>;
  ];
  "nd2" -> "nd3" [
    id = "support:cloud";
    label = <<font point-size="10.5">manages<font point-size="12"> <br align="LEFT"/></font></font>>;
  ];
}"
`;
